--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
     this is a slider
     </div>
 <div> this is a slider</div>
-<div> this is a footer</div>
+<div> this is a footer
+    this is another line
+</div>
